<resources>
    <string name="app_name">PokeRAM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pokedexScreenTitle">Pokédex</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pokedex_init_title">Click here to search</string>

    <string name="finish">FINISH</string>
    <string name="Name">Name:</string>
    <string name="Stats">Stats</string>
    <string name="hp">HP: </string>
    <string name="attack">Attack: </string>
    <string name="defense">Defense: </string>
    <string name="specialAttack">Special Attack: </string>
    <string name="specialDefense">Special Defense: </string>
    <string name="speed">Speed: </string>


    <string name="moves">Moves</string>
    <string name="pokemon">Pokemon</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types:</string>


</resources>
